# robot.hs

./: README.md  REQUIREMENTS.md  robot.cabal
app/: Main.hs
doc/: requirements.md  tabletop.md
scripts/: build  exec  test
src/: Data.hs  Direction.hs  Examples.hs  Lib.hs  Parser.hs  Point.hs  Robot.hs  Run.hs
test/: Spec.hs
