name:                robot
version:             0.1.0.0
-- synopsis:
-- description:
author:              Logan Campbell
maintainer:          robot@logaan.com
copyright:           2017 Logan Campbell
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Direction
                     , Parser
                     , Point
                     , Robot
                     , Run
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable robot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , robot
  default-language:    Haskell2010

test-suite robot-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , robot
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
